# ml_digits

./: .gitignore  .python-version  README.md  digits.py  digits_display.py  main.py  main_window.blp  main_window.ui  pyproject.toml
draw_digits/: main.py  main_window.blp  main_window.ui  pyproject.toml  run.sh
draw_digits/models/: sk_learn_digits.joblib
learn_digits/: LICENSE  convert_to_ov.py  ml_digits.ipynb  pyproject.toml  sklearn_digits.ipynb  sklearn_digits.py  tensor_flow_digits.ipynb  tf_learn_digits.keras  tf_learn_digits.py
models/: ov_digits.xml  sklearn_digits.joblib  tf_digits.keras
