[project]
name = "drawing-window-gtk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "pycairo>=1.29.0",
    "pygobject>=3.54.5",
    "pygobject-stubs>=2.16.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]
